# S3-Service

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
app/api/routers/: router.py
app/api/routers/v1/: assets.py  upload.py
app/core/: config.py  logging.py
app/db/: session.py  sync_session.py
app/models/: __init__.py  media.py
app/schemas/: media.py
app/services/: media_service.py  validation.py
migrations/: env.py
migrations/versions/: 802bb9a6b69c_initial.py
