[project]
name = "s3-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.43.33",
    "fastapi[standard]>=0.137.2",
    "gunicorn>=26.0.0",
    "pathlib>=1.0.1",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.13.3",
    "pytest-asyncio>=1.4.0",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
]
